# triac

./: CMakeLists.txt  README.md
examples/: socket_client.c  socket_echo.c
include/triac/: constants.h  socket.h  types.h
src/: socket.c
static/: index.html
